# rust-m88k

./: Cargo.toml  README.md
.github/workflows/: docs.yml  rust.yml
src/: lib.rs
src/cpu/: mod.rs
src/cpu/instructions/: mod.rs
src/cpu/instructions/arithmetic/: mod.rs
src/cpu/instructions/control/: mod.rs
src/cpu/instructions/floating_point/: mod.rs
src/cpu/instructions/logical/: mod.rs
src/cpu/instructions/memory_access/: mod.rs
src/cpu/instructions/mmu/: mod.rs
src/cpu/instructions/system/: mod.rs
src/cpu/instructions/vector/: mod.rs
src/memory/: mod.rs
