[package]
name = "rust-m88k"
version = "0.1.0"
edition = "2021"
description = "A Motorola 88000 CPU emulation library written in Rust"
authors = ["Paige Thompson <paige@paige.bio>"]

[lib]
name = "motorola88k"
path = "src/lib.rs"

[dependencies]
# We'll add more dependencies as needed

[dev-dependencies]
# Test dependencies will go here 